# cpu-path-tracer

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  main.cpp
include/: Camera.h  Color.h  Hittable.h  HittableList.h  Interval.h  Material.h  Ray.h  Sphere.h  Vec3.h  color.h  hittable.h  ray.h  rtweekend.h  sphere.h  vec3.h
src/: main.cpp
